--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
     "ipykernel==6.29.5",
     "datasets==3.2.0",
     "ipywidgets==8.1.5",
-    "transformers==4.48.1",
+    "transformers[torch]==4.48.1",
     "docopt==0.6.2",
     "dpu-utils==0.6.1",
     "tree-sitter==0.23.1",
@@ -19,7 +19,11 @@ dependencies = [
     "tree-sitter-php==0.23.11",
     "tree-sitter-ruby==0.23.1",
     "tree-sitter-javascript==0.23.1",
-    "tree-sitter-go==0.23.4"
+    "tree-sitter-go==0.23.4",
+    "wandb==0.19.4",
+    "torch==2.5.1",
+    "huggingface-hub==0.26.0",
+    "pyyaml==6.0.2",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
@@ -30,6 +34,10 @@ url = "https://download.pytorch.org/whl/cu124"
 verify_ssl = true
 include_packages = ["torch", "torchvision", "torchaudio"]
 name = "cuda"
+
+[build-system]
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = false
