--- a/configs/add.yaml
+++ b/configs/add.yaml
@@ -22,4 +22,7 @@ data:
   mlm_probability: 0.15
 
 model:
-  extra_embeddings: false
+  extra_embeddings: true
+  max_depth: 512
+  max_sibling_index: 512
+  sum_embeddings: true
