--- a/configs/add-weighted.yaml
+++ b/configs/add-weighted.yaml
@@ -27,5 +27,5 @@ model:
   max_depth: 512
   max_sibling_index: 512
   sum_embeddings: true
-  weighted_sum: false
+  weighted_sum: true
   concat_embeddings: false
