--- a/configs/add-weighted.yaml
+++ b/configs/add-weighted.yaml
@@ -29,3 +29,12 @@ model:
   sum_embeddings: true
   weighted_sum: true
   concat_embeddings: false
+
+finetune_clone_detection:
+  data_source: "patrykbart/1-fold-clone-detection-600k-5fold-tree-enhanced"
+  model_path: "./outputs/add-weighted/final-model/"
+  learning_rate: 0.00001
+  warmup_steps: 0
+  eval_every: 100
+  logging_steps: 10
+  max_steps: 10000
